💄 Fix line height for h1 on small screen

--- a/src/components/markdownComponent/markdownComponent.scss
+++ b/src/components/markdownComponent/markdownComponent.scss
@@ -20,6 +20,7 @@
   h2 {
     padding-bottom: 0.3em;
     border-bottom: 1px solid $nord3;
+    line-height: 1;
   }
 
   hr {
